// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book accommodation from Render book accommodation from 1`] = `
<div>
  <div>
    <div
      className="makeStyles-rightSide-2"
    >
      <div
        className="MuiBox-root MuiBox-root-13 makeStyles-stepperContainer-9"
      >
        <div
          className="MuiBox-root MuiBox-root-14 makeStyles-stepperBox-10"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiAvatar-fallback"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-15 makeStyles-stepperBox-10"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiAvatar-fallback"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-16 makeStyles-stepperBox-10"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiAvatar-fallback"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
        </div>
      </div>
      <div>
        <div>
          <p
            className="MuiTypography-root makeStyles-instructions-6 MuiTypography-body1"
          >
            <div
              className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                className="MuiCardContent-root"
              >
                <form
                  action="#"
                  form-data="form-1"
                  onReset={[Function]}
                  onSubmit={[Function]}
                >
                  <button
                    className="MuiButtonBase-root MuiCardActionArea-root"
                    disabled={false}
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <span
                      className="MuiSkeleton-root MuiSkeleton-rect makeStyles-media-17 MuiSkeleton-wave"
                      style={
                        Object {
                          "height": undefined,
                          "width": undefined,
                        }
                      }
                    />
                    <div
                      className="MuiCardContent-root makeStyles-cardContent-24"
                    >
                      <span
                        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave"
                        style={
                          Object {
                            "height": 30,
                            "width": "60%",
                          }
                        }
                      />
                      <span
                        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave"
                        style={
                          Object {
                            "height": 10,
                            "width": "80%",
                          }
                        }
                      />
                    </div>
                    <div
                      className="MuiCardActions-root makeStyles-cardActions-19 MuiCardActions-spacing"
                    >
                      <span
                        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave"
                        style={
                          Object {
                            "height": 30,
                            "width": "60%",
                          }
                        }
                      />
                    </div>
                    <span
                      className="MuiCardActionArea-focusHighlight"
                    />
                  </button>
                </form>
              </div>
            </div>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Book accommodation from Render book accommodation from 2`] = `
<div>
  <div>
    <div
      className="makeStyles-rightSide-2"
    >
      <div
        className="MuiBox-root MuiBox-root-30 makeStyles-stepperContainer-9"
      >
        <div
          className="MuiBox-root MuiBox-root-31 makeStyles-stepperBox-10"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiAvatar-fallback"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-32 makeStyles-stepperBox-10"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiAvatar-fallback"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
        </div>
        <div
          className="MuiBox-root MuiBox-root-33 makeStyles-stepperBox-10"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circle MuiSkeleton-withChildren MuiSkeleton-fitContent MuiSkeleton-heightAuto MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiAvatar-fallback"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
          <span
            className="MuiSkeleton-root MuiSkeleton-rect makeStyles-stepperText-11 MuiSkeleton-pulse"
            style={
              Object {
                "height": undefined,
                "width": undefined,
              }
            }
          />
        </div>
      </div>
      <div>
        <div>
          <p
            className="MuiTypography-root makeStyles-instructions-6 MuiTypography-body1"
          >
            <div
              className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                className="MuiCardContent-root"
              >
                <form
                  action="#"
                  form-data="form-1"
                  onReset={[Function]}
                  onSubmit={[Function]}
                >
                  <button
                    className="MuiButtonBase-root MuiCardActionArea-root"
                    disabled={false}
                    onBlur={[Function]}
                    onDragLeave={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <span
                      className="MuiSkeleton-root MuiSkeleton-rect makeStyles-media-17 MuiSkeleton-wave"
                      style={
                        Object {
                          "height": undefined,
                          "width": undefined,
                        }
                      }
                    />
                    <div
                      className="MuiCardContent-root makeStyles-cardContent-24"
                    >
                      <span
                        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave"
                        style={
                          Object {
                            "height": 30,
                            "width": "60%",
                          }
                        }
                      />
                      <span
                        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave"
                        style={
                          Object {
                            "height": 10,
                            "width": "80%",
                          }
                        }
                      />
                    </div>
                    <div
                      className="MuiCardActions-root makeStyles-cardActions-19 MuiCardActions-spacing"
                    >
                      <span
                        className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-wave"
                        style={
                          Object {
                            "height": 30,
                            "width": "60%",
                          }
                        }
                      />
                    </div>
                    <span
                      className="MuiCardActionArea-focusHighlight"
                    />
                    <span
                      className="MuiTouchRipple-root"
                    />
                  </button>
                </form>
              </div>
            </div>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
